[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/ship.gd" type="Script" id=1]
[ext_resource path="res://sprites/Ship-sheet.png" type="Texture" id=2]
[ext_resource path="res://scenes/enemie.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/alien_group.gd" type="Script" id=4]
[ext_resource path="res://scenes/shield.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/game.gd" type="Script" id=6]
[ext_resource path="res://fonts/PrStart.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scripts/life_draw.gd" type="Script" id=8]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "explode"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 )
}

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 7 )

[node name="game" type="Node"]
script = ExtResource( 6 )

[node name="ship" type="Area2D" parent="."]
position = Vector2( 90, 267 )
collision_mask = 0
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="ship"]
texture = ExtResource( 2 )
hframes = 3

[node name="poly" type="CollisionPolygon2D" parent="ship"]
scale = Vector2( 1, 0.951389 )
polygon = PoolVector2Array( -8, 4, -8, -1, 0, -4, 8, -1, 8, 5, -1, 5, -8, 5 )

[node name="anim" type="AnimationPlayer" parent="ship"]
anims/RESET = SubResource( 2 )
anims/explode = SubResource( 3 )

[node name="alien_group" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="aliens" type="Node2D" parent="alien_group"]

[node name="enemie" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 32, 36 )

[node name="enemie2" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 48, 36 )

[node name="enemie3" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 64, 36 )

[node name="enemie4" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 80, 36 )

[node name="enemie5" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 96, 36 )

[node name="enemie6" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 112, 36 )

[node name="enemie7" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 128, 36 )

[node name="enemie8" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 144, 36 )

[node name="enemie9" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 32, 48 )
tipo = 1

[node name="enemie10" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 48, 48 )
tipo = 1

[node name="enemie11" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 64, 48 )
tipo = 1

[node name="enemie12" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 80, 48 )
tipo = 1

[node name="enemie13" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 96, 48 )
tipo = 1

[node name="enemie14" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 112, 48 )
tipo = 1

[node name="enemie15" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 128, 48 )
tipo = 1

[node name="enemie16" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 144, 48 )
tipo = 1

[node name="enemie17" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 32, 60 )
tipo = 1

[node name="enemie18" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 48, 60 )
tipo = 1

[node name="enemie19" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 64, 60 )
tipo = 1

[node name="enemie20" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 80, 60 )
tipo = 1

[node name="enemie21" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 96, 60 )
tipo = 1

[node name="enemie22" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 112, 60 )
tipo = 1

[node name="enemie23" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 128, 60 )
tipo = 1

[node name="enemie24" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 144, 60 )
tipo = 1

[node name="enemie25" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 32, 72 )
tipo = 0

[node name="enemie26" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 48, 72 )
tipo = 0

[node name="enemie27" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 64, 72 )
tipo = 0

[node name="enemie28" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 80, 72 )
tipo = 0

[node name="enemie29" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 96, 72 )
tipo = 0

[node name="enemie30" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 112, 72 )
tipo = 0

[node name="enemie31" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 128, 72 )
tipo = 0

[node name="enemie32" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 144, 72 )
tipo = 0

[node name="enemie33" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 32, 84 )
tipo = 0

[node name="enemie34" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 48, 84 )
tipo = 0

[node name="enemie35" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 64, 84 )
tipo = 0

[node name="enemie36" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 80, 84 )
tipo = 0

[node name="enemie37" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 96, 84 )
tipo = 0

[node name="enemie38" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 112, 84 )
tipo = 0

[node name="enemie39" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 128, 84 )
tipo = 0

[node name="enemie40" parent="alien_group/aliens" instance=ExtResource( 3 )]
position = Vector2( 144, 84 )
tipo = 0

[node name="timer_shot" type="Timer" parent="alien_group"]
autostart = true

[node name="timer_move" type="Timer" parent="alien_group"]

[node name="timer_mother_ship" type="Timer" parent="alien_group"]
one_shot = true

[node name="timer_pause" type="Timer" parent="alien_group"]
wait_time = 0.02
one_shot = true

[node name="shields" type="Node" parent="."]

[node name="shield" parent="shields" instance=ExtResource( 5 )]
position = Vector2( 40, 247 )

[node name="shield2" parent="shields" instance=ExtResource( 5 )]
position = Vector2( 72, 247 )

[node name="shield3" parent="shields" instance=ExtResource( 5 )]
position = Vector2( 104, 247 )

[node name="shield4" parent="shields" instance=ExtResource( 5 )]
position = Vector2( 136, 247 )

[node name="HUD" type="Node" parent="."]

[node name="score" type="Label" parent="HUD"]
margin_top = 2.0
margin_right = 180.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "999999"
align = 2
valign = 1

[node name="life_draw" type="Node2D" parent="HUD"]
position = Vector2( 3, 4 )
script = ExtResource( 8 )
textura = ExtResource( 2 )

[connection signal="timeout" from="alien_group/timer_shot" to="alien_group" method="_on_timer_shot_timeout"]
[connection signal="timeout" from="alien_group/timer_move" to="alien_group" method="_on_timer_move_timeout"]
[connection signal="timeout" from="alien_group/timer_mother_ship" to="alien_group" method="_on_timer_mother_ship_timeout"]
